package Protos;

message SpikeNeuronInfo {
    required uint32 id = 1;
    required uint32 xi = 2;
    required uint32 yi = 3;
    required uint32 colSize = 4;
    required double axonDelay = 5;
    required uint32 num_of_synapses = 6;
    required bool act_function_is_set = 7;
    required bool input_is_set = 8;
    required bool lrule_is_set = 9;
}

